# ldif2csv

./: .gitignore  README.md  pyproject.toml  setup.cfg
ldif2csv/: ldif2csv.py
src/: ldif2csv.py
