[metadata]
name = ldif2csv
version = 0.1.0
license = MIT
author = Proofpoint
maintainer = Ludvik Jerabek
url = https://github.com/pfptcommunity/ldif2csv
description = Conversion tool for LDIF to CSV

[options]
zip_safe = False
include_package_data = False
packages =
    ldif2csv
python_requires = >= 3.9
install_requires = ldif

[options.entry_points]
console_scripts =
    ldif2csv = ldif2csv.ldif2csv:main